完成导入后的逻辑